--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -1,5 +1,6 @@
 header.header
-	img.header__logo(src='img/logo.png')
+	a(href='#')
+		img.header__logo(src='img/logo.png')
 	p.header__text.header__text-ipad +375 29 000 00 00
 	div.header__menu#header__menu
 		//- input(type="checkbox" id="hamburger" hidden="hidden")
