--- a/src/pug/includes/_menu.pug
+++ b/src/pug/includes/_menu.pug
@@ -38,7 +38,7 @@ div.menu_mobile.js_menu_mobile_open
 
 		h3 +375 29 300 00 00
 
-		+btn('btn-opasity btn-center btn-uppercase', 'Обратный звонок')
+		+btn('btn-opasity btn-center btn-uppercase js_form_order', 'Обратный звонок')
 
 		ul.social_links
 			li
