--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -5,7 +5,7 @@
 // @import lib/svgfont
 @import lib/variables
 @import lib/slick
-@import lib/fancybox
+@import lib/lightgallery
 @import lib/jquery-ui/jquery-ui
 @import lib/jquery-ui/jquery-ui-structure
 @import lib/jquery-ui/jquery-ui-theme
