--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -1,4 +1,5 @@
 include _btn
+include _a
 footer.footer.footer__footer
 	ul.links_quarter
 		li 
@@ -27,7 +28,7 @@ footer.footer.footer__footer
 		li  
 			h3 
 				
-	+btn('btn-green btn-center btn-uppercase', 'подобрать квартиру')
+	+a('btn-green btn-center btn-uppercase', 'подобрать квартиру','#')
 
 	ul.social_links
 		li
