--- a/src/sass/_loyalty.scss
+++ b/src/sass/_loyalty.scss
@@ -18,17 +18,21 @@
 			align-items: flex-start;
 			border-bottom: 1px solid $grey;
 			padding: 25px 0;
+			a {
+				text-decoration: none;
+				color: #000;
+			}
 			div {
 				flex-basis: 49%;
 				p {
 					font-size: 2.5rem;
 				}
-				a {
-
-				}
 				.note {
 					color: $grey;
 					font-size: 2rem;
+				}
+				.links {
+					color: $prime-color;
 				}
 			}
 		}
