--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -622,10 +622,19 @@
 
 
 .modal {
+	.form-error {
+		font-size: 1.5rem;
+		font-family: $font_r;
+		color: red;
+	}
+	.error {
+		border-color: red;
+		color: red;
+	}
 	input,textarea {
 		border-radius: 5px;
 		padding: 20px;
-		font-size: 1.5rem;
+		font-size: 2rem;
 		width: 98%;
    		margin: 0 1% 20px;
 
@@ -648,9 +657,7 @@
 				}
 			}
 		}
-
 	}
-	
 }
 
 // --------------
@@ -707,11 +714,7 @@
 }
 .menu_mobile-close { display: block; }
 
-// maps
-.gotoymaps__icon, .gotoymaps__text {
-	display: none;
-}
-.gotoymaps__icon,.ymaps-copyright-agreement-black a,.ymaps-logo-link-ru {
+.lg-next, .lg-icon,.lg-prev {
 	display: none !important;
 }
 
