--- a/src/sass/_primary.scss
+++ b/src/sass/_primary.scss
@@ -1,3 +1,6 @@
+* {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 html {
 	font-size: $font_size;
 	height: 100%;
@@ -36,7 +39,7 @@ h4 { font-size: 2.7rem; font-family: $font_m }
 p,li { font-size: 2rem;  font-family: $font_r}
 ul { list-style-type: none; }
 
-.overflow-hidden {
+.overflow-hidden, .overflow-hidden-1, .overflow-hidden-2 {
 	overflow: hidden;
 } 
 .out {
