'fix_issue_#2_next'

--- a/bitrix/templates/main/filters.html
+++ b/bitrix/templates/main/filters.html
@@ -103,7 +103,7 @@
                   </li>
                 </ul>
                 <div class="wrapp-search-btn">
-                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button><a> 
+                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button><a class="js-form-reset"> 
                     <p class="link_reset">&times; Сбросить все</p></a>
                 </div>
               </form>
@@ -235,7 +235,7 @@
                   </li>
                 </ul>
                 <div class="wrapp-search-btn">
-                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button><a> 
+                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button><a class="js-form-reset"> 
                     <p class="link_reset">&times; Сбросить все</p></a>
                 </div>
               </form>
