--- a/src/pug/filters.pug
+++ b/src/pug/filters.pug
@@ -57,7 +57,7 @@ block content
 										option Без отделки
 						div.wrapp-search-btn
 							+btn('btn-white btn-center btn-uppercase btn-text_dark-green','Найти квартиру')
-							a 
+							a.js-form-reset 
 								p.link_reset &times; Сбросить все
 
 				div.tabs-deployed.js_tab_item.hidden(data-tab-container="tab2")
@@ -164,7 +164,7 @@ block content
 										option Лоджия, отделка, погреб
 						div.wrapp-search-btn
 							+btn('btn-white btn-center btn-uppercase btn-text_dark-green','Найти квартиру')
-							a 
+							a.js-form-reset 
 								p.link_reset &times; Сбросить все
 
 	include includes/_footer
