--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -91,7 +91,7 @@ block content
 							li логистические центры
 							li автозаправочные комплексы и т.д
 						div#work_list  
-							span.read-other.read-other_green Читать подробнее
+							span.read-other.read-other_green Читать подробнее <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"/></svg>
 
 		section.title-map_and_contact
 			div.sales-dep
@@ -121,13 +121,13 @@ block content
 				div.accordion
 					div.accordion-item
 						div.slow-drop#transport
-							span.read-other.read-other_black Общественный транспорт
+							span.read-other.read-other_black Общественный транспорт	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"/></svg>
 						div.slow-drop.read-other__close#transport-open
 							h3 Автобусы, Троллейбусы
 							p 34 3643 783742
 					.accordion-item
 						div#auto 
-							span.read-other.read-other_black Автомобиль
+							span.read-other.read-other_black Автомобиль <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"/></svg>
 						div.read-other__close#auto-open
 							h3 Автобусы, Троллейбусы
 							p 34 3643 783742
