--- a/bitrix/templates/main/filters.html
+++ b/bitrix/templates/main/filters.html
@@ -64,9 +64,7 @@
                   <li class="tabs-fast_list_item js_ui_slider" data-min="0" data-max="1000" data-step="10" data-default-value-to="100" data-default-value-from="500">
                     <div class="filter-text">
                       <p class="filter-text_main">Стоимость, тыс $</p>
-                      <p class="filter-text_secondary">
-                        <label class="js_ui_slider_label"></label>
-                        <input class="js_ui_slider_input" type="text" disabled>
+                      <p class="filter-text_secondary"><span class="js_ui_slider_input"></span>
                         <input class="hidden js_ui_slider_value_top">
                         <input class="hidden js_ui_slider_value_bottom">
                       </p>
@@ -114,9 +112,7 @@
                   <li class="tabs-fast_list_item js_ui_slider" data-min="0" data-max="1000" data-step="10" data-default-value-to="100" data-default-value-from="500">
                     <div class="filter-text">
                       <p class="filter-text_main">Площадь, м <sup>2</sup></p>
-                      <p class="filter-text_secondary">
-                        <label class="js_ui_slider_label"></label>
-                        <input class="js_ui_slider_input" type="text" disabled>
+                      <p class="filter-text_secondary"><span class="js_ui_slider_input"></span>
                         <input class="hidden js_ui_slider_value_top">
                         <input class="hidden js_ui_slider_value_bottom">
                       </p>
@@ -128,9 +124,7 @@
                   <li class="tabs-fast_list_item js_ui_slider" data-min="0" data-max="1000" data-step="10" data-default-value-to="100" data-default-value-from="500">
                     <div class="filter-text">
                       <p class="filter-text_main">Жилая площадь, м <sup>2</sup></p>
-                      <p class="filter-text_secondary">
-                        <label class="js_ui_slider_label"></label>
-                        <input class="js_ui_slider_input" type="text" disabled>
+                      <p class="filter-text_secondary"><span class="js_ui_slider_input"></span>
                         <input class="hidden js_ui_slider_value_top">
                         <input class="hidden js_ui_slider_value_bottom">
                       </p>
@@ -142,9 +136,7 @@
                   <li class="tabs-fast_list_item js_ui_slider" data-min="0" data-max="1000" data-step="10" data-default-value-to="100" data-default-value-from="500">
                     <div class="filter-text">
                       <p class="filter-text_main">Стоимость, тыс $</p>
-                      <p class="filter-text_secondary">
-                        <label class="js_ui_slider_label"></label>
-                        <input class="js_ui_slider_input" type="text" disabled>
+                      <p class="filter-text_secondary"><span class="js_ui_slider_input"></span>
                         <input class="hidden js_ui_slider_value_top">
                         <input class="hidden js_ui_slider_value_bottom">
                       </p>
@@ -156,9 +148,7 @@
                   <li class="tabs-fast_list_item js_ui_slider" data-min="0" data-max="1000" data-step="10" data-default-value-to="100" data-default-value-from="500">
                     <div class="filter-text">
                       <p class="filter-text_main">Цена $/м <sup>2</sup></p>
-                      <p class="filter-text_secondary">
-                        <label class="js_ui_slider_label"></label>
-                        <input class="js_ui_slider_input" type="text" disabled>
+                      <p class="filter-text_secondary"><span class="js_ui_slider_input"></span>
                         <input class="hidden js_ui_slider_value_top">
                         <input class="hidden js_ui_slider_value_bottom">
                       </p>
