--- a/src/pug/filters.pug
+++ b/src/pug/filters.pug
@@ -25,8 +25,9 @@ block content
 								div.filter-text
 									p.filter-text_main Стоимость, тыс $
 									p.filter-text_secondary
-										label.js_ui_slider_label
-										input.js_ui_slider_input(type="text" disabled)
+										//- label.js_ui_slider_label(for='qwe')
+										//- input.js_ui_slider_input(type="text" disabled id='qwe')
+										span.js_ui_slider_input
 										input.hidden.js_ui_slider_value_top
 										input.hidden.js_ui_slider_value_bottom
 								div.filter-value
@@ -67,8 +68,7 @@ block content
 								div.filter-text
 									p.filter-text_main Площадь, м <sup>2</sup>
 									p.filter-text_secondary
-										label.js_ui_slider_label
-										input.js_ui_slider_input(type="text" disabled)
+										span.js_ui_slider_input
 										input.hidden.js_ui_slider_value_top
 										input.hidden.js_ui_slider_value_bottom
 								div.filter-value
@@ -78,8 +78,7 @@ block content
 								div.filter-text
 									p.filter-text_main Жилая площадь, м <sup>2</sup>
 									p.filter-text_secondary
-										label.js_ui_slider_label
-										input.js_ui_slider_input(type="text" disabled)
+										span.js_ui_slider_input
 										input.hidden.js_ui_slider_value_top
 										input.hidden.js_ui_slider_value_bottom
 								div.filter-value
@@ -89,8 +88,7 @@ block content
 								div.filter-text
 									p.filter-text_main Стоимость, тыс $
 									p.filter-text_secondary
-										label.js_ui_slider_label
-										input.js_ui_slider_input(type="text" disabled)
+										span.js_ui_slider_input
 										input.hidden.js_ui_slider_value_top
 										input.hidden.js_ui_slider_value_bottom
 								div.filter-value
@@ -100,8 +98,7 @@ block content
 								div.filter-text
 									p.filter-text_main Цена $/м <sup>2</sup>
 									p.filter-text_secondary
-										label.js_ui_slider_label
-										input.js_ui_slider_input(type="text" disabled)
+										span.js_ui_slider_input
 										input.hidden.js_ui_slider_value_top
 										input.hidden.js_ui_slider_value_bottom
 								div.filter-value
