--- a/src/sass/_filters.scss
+++ b/src/sass/_filters.scss
@@ -36,7 +36,7 @@
 						}
 						.filter-text_secondary {
 							color: #000;
-							input {
+							span,input {
 								background-color: rgba(0,0,0,0);
 								font-size: 1.5rem;
 							}
