--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -160,13 +160,15 @@
                   <li>логистические центры</li>
                   <li>автозаправочные комплексы и т.д</li>
                 </ul>
-                <ul class="about-work_list list read-other__close" id="work_list-open">
-                  <li>жилые дома и квартиры</li>
-                  <li>торговые и бизнес-центры</li>
-                  <li>автосалоны</li>
-                  <li>логистические центры</li>
-                  <li>автозаправочные комплексы и т.д</li>
-                </ul>
+                <div id="work_list-open">
+                  <ul class="about-work_list list">
+                    <li>жилые дома и квартиры</li>
+                    <li>торговые и бизнес-центры</li>
+                    <li>автосалоны</li>
+                    <li>логистические центры</li>
+                    <li>автозаправочные комплексы и т.д</li>
+                  </ul>
+                </div>
                 <div id="work_list"> <span class="read-other read-other_green">Читать подробнее <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"/></svg></span></div>
               </div>
             </div>
