'finish_him_again'

--- a/src/pug/filters.pug
+++ b/src/pug/filters.pug
@@ -6,7 +6,6 @@ block title
 block content
 	include includes/_sliders
 	include includes/_btn
-	include includes/_menu
 
 	include includes/_header
 	
@@ -165,6 +164,9 @@ block content
 								p.link_reset &times; Сбросить все
 
 	include includes/_footer
+
+	include includes/_menu
+	include includes/_modal
 	
 
 
