--- a/src/pug/news-one.pug
+++ b/src/pug/news-one.pug
@@ -6,7 +6,6 @@ block title
 block content
 	include includes/_sliders
 	include includes/_btn
-	include includes/_menu
 
 	include includes/_header
 	
@@ -35,6 +34,10 @@ block content
 		
 		include includes/_link_back
 	include includes/_footer
+
+	
+	include includes/_menu
+	include includes/_modal
 	
 
 
