--- a/src/pug/about-quarter.pug
+++ b/src/pug/about-quarter.pug
@@ -6,7 +6,6 @@ block title
 block content
 	include includes/_sliders
 	include includes/_btn
-	include includes/_menu
 
 	include includes/_header
 	div.wrapp-about-quarter-page
@@ -58,6 +57,9 @@ block content
 
 		include includes/_link_back
 	include includes/_footer
+
+	include includes/_menu
+	include includes/_modal
 	
 
 
