--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -6,8 +6,6 @@ block title
 block content
 	include includes/_sliders
 	include includes/_btn
-	include includes/_menu
-
 
 	include includes/_header
 	div.wrapp-contacts-page
@@ -41,20 +39,23 @@ block content
 				p Как добраться
 				div.accordion
 					div.accordion-item
-						div#transport
-							span.read-other.read-other_black Общественный транспорт
-						div.read-other__close#transport-open
+						div.slow-drop#transport
+							span.read-other.read-other_black Общественный транспорт	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"/></svg>
+						div.slow-drop.read-other__close#transport-open
 							h3 Автобусы, Троллейбусы
 							p 34 3643 783742
 					.accordion-item
 						div#auto 
-							span.read-other.read-other_black Автомобиль
+							span.read-other.read-other_black Автомобиль <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"/></svg>
 						div.read-other__close#auto-open
 							h3 Автобусы, Троллейбусы
 							p 34 3643 783742
 		
 		include includes/_link_back
 	include includes/_footer
+
+	include includes/_menu
+	include includes/_modal
 	
 
 
