--- a/src/pug/filters-resalt.pug
+++ b/src/pug/filters-resalt.pug
@@ -6,7 +6,7 @@ block title
 block content
 	include includes/_sliders
 	include includes/_btn
-	include includes/_menu
+	
 
 	include includes/_header
 	
@@ -61,6 +61,9 @@ block content
 								h4.price 80 600 USD
 
 	include includes/_footer
+
+	include includes/_menu
+	include includes/_modal
 	
 
 
