--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -6,7 +6,6 @@ block title
 block content
 	include includes/_sliders
 	include includes/_btn
-	include includes/_menu
 
 	include includes/_header
 	
@@ -32,6 +31,9 @@ block content
 		
 		include includes/_link_back
 	include includes/_footer
+
+	include includes/_menu
+	include includes/_modal
 	
 
 
