--- a/src/pug/price.pug
+++ b/src/pug/price.pug
@@ -7,7 +7,7 @@ block content
 	include includes/_sliders
 	include includes/_btn
 	include includes/_a
-	include includes/_menu
+	
 
 	include includes/_header
 	
@@ -44,6 +44,8 @@ block content
 		include includes/_link_back
 	include includes/_footer
 	
+	include includes/_menu
+	include includes/_modal
 
 
 
