--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -20,11 +20,16 @@
       <h3 class="header__text-iphone">+375 29 000 00 00</h3>
       <ul>
         <li><a href="/" style="true">Главная </a></li>
+        <li><a href="/about-quarter.html">О кедровом квартале</a></li>
+        <li><a href="/contacts.html">Контакты</a></li>
+        <li><a href="/filters-resalt-item.html">Квартира подобранная в фильтре</a></li>
+        <li><a href="/filters-resalt.html">Результаты фильтра</a></li>
+        <li><a href="/filters.html">Фильтры</a></li>
         <li><a href="/foto-gallery.html">Фотогалерея</a></li>
-        <li><a href="/about-quarter.html">О квартале</a></li>
-        <li><a href="/price.html">Цена</a></li>
         <li><a href="/loyalty-program.html">Программа лояльности</a></li>
-        <li><a href="/contacts.html">Отдел продаж</a></li>
+        <li><a href="/news.html">Новоcти</a></li>
+        <li><a href="/news-one.html">Одна новоcть</a></li>
+        <li><a href="/price.html">Цена</a></li>
       </ul>
       <footer class="footer footer__footer">
         <ul class="links_quarter">
