--- a/src/pug/map.pug
+++ b/src/pug/map.pug
@@ -11,17 +11,26 @@ block content
 		li
 			a(href='/' style) Главная 
 		li
+			a(href='/about-quarter.html') О кедровом квартале
+		li
+			a(href='/contacts.html') Контакты
+		li
+			a(href='/filters-resalt-item.html') Квартира подобранная в фильтре
+		li
+			a(href='/filters-resalt.html') Результаты фильтра
+		li
+			a(href='/filters.html') Фильтры
+		li
 			a(href='/foto-gallery.html') Фотогалерея
-		li
-			a(href='/about-quarter.html') О квартале
-		li
-			a(href='/price.html') Цена
 		li
 			a(href='/loyalty-program.html') Программа лояльности
 		li
-			a(href='/contacts.html') Отдел продаж
-
-			
+			a(href='/news.html') Новоcти
+		li
+			a(href='/news-one.html') Одна новоcть
+		li
+			a(href='/price.html') Цена
+		
 
 	include includes/_footer
 	
